# PortfolioCommandCenter-public

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: ci.yml
scripts/: release-macos.sh
src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.test.ts  types.ts  validation.test.ts  validation.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.demo.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/test/: setup.ts
src/views/: Automation.test.tsx  Automation.tsx  PortfolioTable.tsx  ProjectDetail.tsx  RiskSecurity.tsx  SecurityBurndown.tsx  Trends.tsx  WeeklyDigest.tsx  projectDrawer.tsx
