[package]
name = "portfolio-command-center"
version = "0.1.0"
description = "Desktop command center over the GithubRepoAuditor portfolio truth snapshot."
authors = ["saagpatel"]
license = "MIT"
edition = "2021"

[lib]
name = "portfolio_command_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
